# visacd_batched

./: .gitignore  README.md  benchmark_parallel.py  benchmark_perturbed.py  benchmark_thingi10k.py  pyproject.toml  verify_batch_matrix.py  verify_preprocessing_cuda.py
benchmarking/: benchmark_batch_decomposition.py
docs/: visacd_batched_overview.tex
lib/: CMakeLists.txt  bindings.cpp
lib/cuda/: candidate_planes.cu  clip_batch.cu  components_batch.cu  convex_hull_batch.cu  device_mesh.cu  edge_compaction.cu  flat_surfaces_batch.cu  hausdorff_batch.cu  merge_cost_batch.cu  plane_intersections_batch.cu  preprocess_cuda.cu  preprocess_cuda_batch.cu  preprocess_expand_cuda.cu  preprocess_flood_cuda.cu  preprocess_mesh_cuda.cu  preprocess_renormalize_cuda.cu  preprocess_surface_post_cuda.cu
lib/include/: batch_executor.hpp  candidate_planes.hpp  clip.hpp  clip_batch.hpp  components_batch.hpp  config.hpp  convex_hull_batch.hpp  core.hpp  cost.hpp  cuda_buffer.hpp  device_mesh.hpp  edge_compaction.hpp  flat_surfaces_batch.hpp  hausdorff_batch.hpp  intersections.hpp  merge_batch.hpp  merge_cost_batch.hpp  plane_intersections.hpp  postprocess.hpp  preprocess.hpp  preprocess_cuda.hpp  preprocess_expand_cuda.hpp  preprocess_flood_cuda.hpp  preprocess_mesh_cuda.hpp  preprocess_mesh_tables.hpp  preprocess_renormalize_cuda.hpp  preprocess_surface_post_cuda.hpp  process.hpp  resettable_runtime.hpp  support_surface.hpp
lib/ptx/: ray_segments.cu
lib/src/: clip.cpp  core.cpp  cost.cpp  intersections.cpp  intersections_batch.cpp  merge_batch.cpp  postprocess.cpp  preprocess.cpp  preprocess_mesh_tables.cpp  process.cpp  process_batch.cpp  support_surface.cpp
tests/: test_batch.py
