[build-system]
requires = ["scikit-build-core>=0.9"]
build-backend = "scikit_build_core.build"

[project]
name = "visacd"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["numpy", "trimesh"]

[tool.scikit-build]
cmake.source-dir = "lib"
cmake.build-type = "Release"
build-dir = "build"

[tool.scikit-build.cmake.define]
OptiX_INSTALL_DIR = {env = "OptiX_INSTALL_DIR"}
